# pkg/gin_service/routes.go
@@ -7,8 +7,9 @@ import (
 )
 
 func setRoutes(ginGroup *gin.RouterGroup) {
-	ginGroup.POST("/comment", PostComment)
+	ginGroup.POST("/comment", CreateComment)
 	ginGroup.GET("/comment/:id", GetComment)
+	ginGroup.PUT("/comment/:id", UpdateComment)
 	ginGroup.GET("/comments/", ListComment)
 	ginGroup.DELETE("/comment/:id", DeleteComment)
 	ginGroup.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
